[back-end] Added && updated models and middlewares
Models:
* AppUser (updated)
* Route
* Stop

Middlewares:
* requestTracker

--- a/back-end/main-app/server/model-config.json
+++ b/back-end/main-app/server/model-config.json
@@ -35,5 +35,13 @@
   "Role": {
     "dataSource": "mongoDs",
     "public": false
+  },
+  "Route": {
+    "dataSource": "mongoDs",
+    "public": true
+  },
+  "Stop": {
+    "dataSource": "mongoDs",
+    "public": true
   }
 }
