[main-app] client/server > upgraded grommet, initialized UserManagement and etc..
Client:
* Fixed sidebar Icon
* Upgraded grommet
* Did changes based on grommet 1.3.1

Server:
* Made Role private
* Changed admin default email.

--- a/server-instances/main-app/server/model-config.json
+++ b/server-instances/main-app/server/model-config.json
@@ -34,7 +34,7 @@
   },
   "Role": {
     "dataSource": "mongoDs",
-    "public": false
+    "public": true
   },
   "Route": {
     "dataSource": "mongoDs",
