[main-app] client/server > added User management to dashboard and did some fixes.
Client:
* Fixed param request on fetchOfficial routes
* Added User Management.

Server:
* Added setRole method on AppUser.
* Added initialize driver role script.
* Added serializers to logger.
* Made reqTracker debug mode.
*

--- a/server-instances/main-app/server/model-config.json
+++ b/server-instances/main-app/server/model-config.json
@@ -34,7 +34,7 @@
   },
   "Role": {
     "dataSource": "mongoDs",
-    "public": true
+    "public": false
   },
   "Route": {
     "dataSource": "mongoDs",
