[main-app] client/server > did fixes and refactoring
Client:
* Did some refactoring on store file names.
* Added header on routes list.

Server:
* Fixed setRole ACL

--- a/server-instances/main-app/server/models/app-user.json
+++ b/server-instances/main-app/server/models/app-user.json
@@ -54,17 +54,17 @@
       "permission": "ALLOW"
     },
     {
+      "accessType": "EXECUTE",
+      "principalType": "ROLE",
+      "principalId": "admin",
+      "permission": "ALLOW",
+      "property": "setRole"
+    },
+    {
       "accessType": "*",
       "principalType": "ROLE",
       "principalId": "admin",
       "permission": "ALLOW"
-    },
-    {
-      "accessType": "EXECUTE",
-      "principalType": "ROLE",
-      "principalId": "$everyone",
-      "permission": "DENY",
-      "property": "setRole"
     }
   ],
   "methods": {}
