[passenger-app][resources] newLB-Android SDK, basics tutorial. Resources: * Added Loopback Android SDK
Passenger-app:
* Added support for google map (API-key)
* Added support for lb-sdk
* Created a basic example based on google developer's training.

--- a/mobile-apps/passenger-app/app/build.gradle
+++ b/mobile-apps/passenger-app/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 25
     buildToolsVersion "25.0.0"
     defaultConfig {
-        applicationId "com.bus_tracker.passengerapp"
+        applicationId "gr.bus_tracker.passenger_app"
         minSdkVersion 15
         targetSdkVersion 25
         versionCode 1
@@ -20,11 +20,13 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.2.0'
+    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.google.android.gms:play-services-maps:10.2.1'
+    compile 'com.strongloop:loopback-sdk-android:1.5.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
 }
