--- a/mobile-apps/passenger-app/gradle/wrapper/gradle-wrapper.properties
+++ b/mobile-apps/passenger-app/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Sat Mar 11 12:25:31 EET 2017
+#Sat Apr 01 12:12:14 EEST 2017
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
