--- a/mobile-apps/driver-app/app/build.gradle
+++ b/mobile-apps/driver-app/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 25
     buildToolsVersion "25.0.0"
     defaultConfig {
-        applicationId "gr.bus_tracker.driverapp"
+        applicationId "gr.bus_tracker.driver_app"
         minSdkVersion 15
         targetSdkVersion 25
         versionCode 1
@@ -26,5 +26,10 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.2.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.google.android.gms:play-services:10.2.1'
+    compile 'com.google.android.gms:play-services-maps:10.2.1'
+    compile 'com.google.android.gms:play-services-location:10.2.1'
+    compile 'com.strongloop:loopback-sdk-android:1.5.1'
+    compile 'com.android.volley:volley:1.0.0'
     testCompile 'junit:junit:4.12'
 }
