--- a/mobile-apps/driver-app/app/build.gradle
+++ b/mobile-apps/driver-app/app/build.gradle
@@ -31,5 +31,7 @@ dependencies {
     compile 'com.google.android.gms:play-services-location:10.2.1'
     compile 'com.strongloop:loopback-sdk-android:1.5.1'
     compile 'com.android.volley:volley:1.0.0'
+    compile 'com.jakewharton:butterknife:8.5.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
     testCompile 'junit:junit:4.12'
 }
