[main-app] added dockerignore

--- a/server-instances/docker-compose.yml
+++ b/server-instances/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "2"
 services:
   main-app:
-    image: bus-tracker-image
+    image: main-app
     environment:
       NODE_ENV: 'production'
       MONGOURL: 'mongodb://mongo/bus-tracker'
