--- a/mobile-apps/driver-app/app/src/main/AndroidManifest.xml
+++ b/mobile-apps/driver-app/app/src/main/AndroidManifest.xml
@@ -3,6 +3,9 @@
           package="gr.bus_tracker.driver_app">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_SYNC_SETTINGS"/>
+    <uses-permission android:name="android.permission.WRITE_SYNC_SETTINGS"/>
+    <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS"/>
 
     <application
         android:allowBackup="true"
@@ -41,6 +44,17 @@
         <meta-data
             android:name="android.accounts.AccountAuthenticator"
             android:resource="@xml/authenticator" />
+    </service>
+
+    <service
+        android:name="com.example.android.datasync.SyncService"
+        android:exported="true"
+        android:process=":sync">
+        <intent-filter>
+            <action android:name="android.content.SyncAdapter"/>
+        </intent-filter>
+        <meta-data android:name="android.content.SyncAdapter"
+                   android:resource="@xml/syncadapter" />
     </service>
 
 </manifest>
