[main-app] fixed access token issue

--- a/server-instances/main-app/server/model-config.json
+++ b/server-instances/main-app/server/model-config.json
@@ -19,7 +19,14 @@
   },
   "AccessToken": {
     "dataSource": "mongoDs",
-    "public": false
+    "public": false,
+    "relations": {
+      "user": {
+        "type": "belongsTo",
+        "model": "AppUser",
+        "foreignKey": "userId"
+      }
+    }
   },
   "ACL": {
     "dataSource": "memoryDs",
