--- a/server-instances/main-app/package.json
+++ b/server-instances/main-app/package.json
@@ -36,6 +36,7 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "grommet": "^1.3.1",
     "grommet-addons": "^0.3.0",
+    "lodash": "^4.17.4",
     "node-sass": "^4.1.1",
     "node-uuid": "^1.4.7",
     "normalizr": "^3.0.0-alpha.5",
@@ -44,6 +45,7 @@
     "react-cookie": "^1.0.4",
     "react-dom": "^15.4.1",
     "react-fa": "^4.1.2",
+    "react-google-maps": "^6.3.0",
     "react-pure-render": "^1.0.2",
     "react-redux": "^4.4.6",
     "react-router": "^3.0.0",
